--- a/BookStoreServer/BookStoreServer.WebApi/BookStoreServer.WebApi.csproj
+++ b/BookStoreServer/BookStoreServer.WebApi/BookStoreServer.WebApi.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="EntityFrameworkCore.Pagination" Version="7.0.5" />
+        <PackageReference Include="Iyzipay" Version="2.1.61" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.14"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.15" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.15">
