--- a/BookStoreServer/BookStoreServer.WebApi/BookStoreServer.WebApi.csproj
+++ b/BookStoreServer/BookStoreServer.WebApi/BookStoreServer.WebApi.csproj
@@ -8,9 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="12.0.1" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="EntityFrameworkCore.Pagination" Version="7.0.5" />
         <PackageReference Include="GenericEmailService" Version="1.0.3" />
         <PackageReference Include="Iyzipay" Version="2.1.61" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.15" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.14"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.15" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.15">
