--- a/BookStoreClient/package.json
+++ b/BookStoreClient/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "i": "^0.3.7",
+    "jwt-decode": "^4.0.0",
     "ngx-spinner": "^16.0.2",
     "npm": "^10.4.0",
     "rxjs": "~7.8.0",
