--- a/BookStoreClient/package.json
+++ b/BookStoreClient/package.json
@@ -21,6 +21,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@sweetalert2/ngx-sweetalert2": "^12.2.0",
+    "admin-lte": "^3.2.0",
     "i": "^0.3.7",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
